--- a/nivelA/unidade4/StoryCards/index.html
+++ b/nivelA/unidade4/StoryCards/index.html
@@ -174,20 +174,25 @@
             displayCard(0); // Exibe o primeiro card ao carregar a página
         }
 
-        // Função para gerar o PDF com o texto da história
+        // Função para gerar o PDF com o texto da história e a logo
         function generatePDF() {
             const { jsPDF } = window.jspdf;
             const doc = new jsPDF();
 
+            // Adiciona a logo (certifique-se de que o caminho para 'Logo.png' está correto)
+            doc.addImage('Logo.png', 'PNG', 85, 10, 40, 40);  // Adiciona a logo no PDF
+
             // Adiciona o título e o nome/dados
-            doc.setFontSize(20);
-            doc.text("Hannah StoryCard", 105, 20, { align: "center" });
             doc.setFontSize(12);
-            doc.text("Name: __________________________________ Date: ____________", 10, 30);
+            doc.text("Name:_______________________________________________________  Date:_______________", 10, 60);
+
+            // Adiciona o título principal
+            doc.setFontSize(20);
+            doc.text("Hannah StoryCard", 105, 80, { align: "center" });
 
             // Adiciona o texto da história
             doc.setFontSize(12);
-            let y = 40; // Posição inicial
+            let y = 100; // Posição inicial
             const lineHeight = 10;
             const lines = doc.splitTextToSize(storyText, 180); // Divide o texto para caber na página
 
