--- a/nivelA/unidade4/StoryCards/index.html
+++ b/nivelA/unidade4/StoryCards/index.html
@@ -9,7 +9,7 @@
             font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f9f9f9;
+            background-color: #f9f9f9';
             color: #333;
             display: flex;
             justify-content: center;
@@ -130,15 +130,17 @@
             storyText = ''; // Reseta o texto da história
 
             lines.forEach(line => {
-                if (line.startsWith('#')) {
+                if (line.startsWith('#title:')) {
+                    document.getElementById('storyTitle').innerText = line.replace('#title:', '').trim(); // Define o título
+                } else if (line.startsWith('#imagem')) {
                     if (currentImage && currentText) {
                         cards.push({ image: currentImage, text: currentText });
                         storyText += currentText + '\n\n'; // Adiciona o texto ao storyText
                     }
-                    currentImage = line.replace('#', '').trim();
-                    currentText = '';
+                    currentImage = line.replace('#', '').trim(); // Define o nome da imagem (ex: imagem1, imagem2, etc)
+                    currentText = ''; // Reseta o texto
                 } else {
-                    currentText += line + ' ';
+                    currentText += line + ' '; // Adiciona o texto à história
                 }
             });
             if (currentImage && currentText) {
