--- a/nivelA/unidade4/StoryCards/index.html
+++ b/nivelA/unidade4/StoryCards/index.html
@@ -9,7 +9,7 @@
             font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f9f9f9';
+            background-color: #f9f9f9;
             color: #333;
             display: flex;
             justify-content: center;
@@ -54,7 +54,10 @@
             width: 100%;
             max-width: 100%;
             min-height: 100px;
-            position: relative; /* Para posicionar a imagem */
+            position: relative;
+        }
+        .active {
+            display: flex;
         }
         .card img {
             max-width: 100%;
@@ -123,7 +126,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script>
-        let showText = false; // Variável para alternar entre texto e imagens
+        let showText = false; // Alterna entre texto e imagens
         let currentCardIndex = 0;
         let cardsData = [];
         let storyText = ''; // Variável para armazenar o texto da história para o PDF
