--- a/nivelA/unidade4/StoryCards/index.html
+++ b/nivelA/unidade4/StoryCards/index.html
@@ -84,8 +84,8 @@
             position: absolute;
             top: 10px;
             right: 10px;
-            width: 50px;
-            height: 50px;
+            width: 30px; /* Tamanho reduzido */
+            height: 30px;
             cursor: pointer;
         }
         button {
@@ -107,6 +107,14 @@
             width: 100%;
             margin-top: 20px;
         }
+        .button-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            gap: 10px;
+            margin-bottom: 20px;
+        }
     </style>
 </head>
 <body>
@@ -114,14 +122,16 @@
 
     <div class="container">
         <h1>Hannah StoryCard</h1>
-        <button id="toggleButton" onclick="toggleView()">Read the story</button>
+        <div class="button-container">
+            <button id="toggleButton" onclick="toggleView()">Read the story</button>
+            <button class="pdf-button" onclick="generatePDF()">Generate PDF</button>
+        </div>
         <div class="title" id="storyTitle"></div>
         <div id="cardsContainer"></div>
         <div class="navigation">
             <button id="prevBtn" onclick="showPreviousCard()">Previous</button>
             <button id="nextBtn" onclick="showNextCard()">Next</button>
         </div>
-        <button class="pdf-button" onclick="generatePDF()">Generate PDF</button>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
