--- a/nivelA/unidade4/StoryCards/index.html
+++ b/nivelA/unidade4/StoryCards/index.html
@@ -84,8 +84,8 @@
             position: absolute;
             top: 10px;
             right: 10px;
-            width: 30px; /* Tamanho reduzido */
-            height: 30px;
+            width: 30px;  /* Tamanho reduzido para ícone */
+            height: 30px;  /* Tamanho reduzido para ícone */
             cursor: pointer;
         }
         button {
