--- a/nivelA/unidade4/StoryCards/index.html
+++ b/nivelA/unidade4/StoryCards/index.html
@@ -84,8 +84,9 @@
             position: absolute;
             top: 10px;
             right: 10px;
-            width: 30px;  /* Tamanho reduzido para ícone */
-            height: 30px;  /* Tamanho reduzido para ícone */
+            width: 30px;  /* Definir tamanho pequeno */
+            height: 30px;  /* Definir tamanho pequeno */
+            object-fit: contain; /* Assegura que a imagem seja ajustada corretamente */
             cursor: pointer;
         }
         button {
@@ -115,6 +116,12 @@
             gap: 10px;
             margin-bottom: 20px;
         }
+        .pdf-button-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
@@ -124,13 +131,15 @@
         <h1>Hannah StoryCard</h1>
         <div class="button-container">
             <button id="toggleButton" onclick="toggleView()">Read the story</button>
-            <button class="pdf-button" onclick="generatePDF()">Generate PDF</button>
         </div>
         <div class="title" id="storyTitle"></div>
         <div id="cardsContainer"></div>
         <div class="navigation">
             <button id="prevBtn" onclick="showPreviousCard()">Previous</button>
             <button id="nextBtn" onclick="showNextCard()">Next</button>
+        </div>
+        <div class="pdf-button-container">
+            <button class="pdf-button" onclick="generatePDF()">Generate PDF</button>
         </div>
     </div>
 
