--- a/nivelA/unidade4/StoryCards/index.html
+++ b/nivelA/unidade4/StoryCards/index.html
@@ -84,10 +84,12 @@
             position: absolute;
             top: 10px;
             right: 10px;
-            width: 30px;  /* Definir tamanho pequeno */
-            height: 30px;  /* Definir tamanho pequeno */
-            object-fit: contain; /* Assegura que a imagem seja ajustada corretamente */
+            width: 30px;  /* Tamanho pequeno */
+            height: 30px;  /* Tamanho pequeno */
+            object-fit: contain; /* Mantém as proporções */
             cursor: pointer;
+            z-index: 10; /* Garante que a imagem fique visível e não seja cortada */
+            max-width: 100%; /* Evita que a imagem seja cortada no container */
         }
         button {
             margin: 20px;
