ajustes na leitura

--- a/nivelA/unidade4/StoryCards/index.html
+++ b/nivelA/unidade4/StoryCards/index.html
@@ -208,40 +208,35 @@
                 cardElement.innerHTML = `<img src="images/${cardData.image}.jpeg" alt="Image">`;
             }
 
-            // Adiciona a imagem do businessman no topo direito
-            const businessmanImage = document.createElement('img');
-            businessmanImage.src = 'businessman.png'; // Caminho para a imagem businessman.png
-            businessmanImage.className = 'businessman';
-            businessmanImage.onclick = () => toggleSpeech(cardData.text); // Faz a leitura do texto ao clicar no businessman
-
-            cardElement.appendChild(businessmanImage);
             container.appendChild(cardElement);
 
-            // Adiciona evento de leitura de texto ao clicar no card
-            cardElement.addEventListener('click', () => {
-                toggleSpeech(cardData.text);
-            });
-        }
-
-        // Função para iniciar ou parar a leitura do texto
-        function toggleSpeech(text) {
-            if (speechSynthesis.speaking) {
-                speechSynthesis.cancel(); // Para a fala atual
+            // Esconde o botão "Previous" se estivermos na primeira imagem
+            const prevButton = document.getElementById('prevBtn');
+            if (index === 0) {
+                prevButton.style.display = 'none'; // Esconde o botão "Previous" na primeira imagem
             } else {
-                currentUtterance = new SpeechSynthesisUtterance(text);
-                currentUtterance.lang = 'en-US'; // Configura o idioma para Inglês (US)
-                speechSynthesis.speak(currentUtterance); // Inicia a fala
+                prevButton.style.display = 'block'; // Exibe o botão "Previous" se não estivermos na primeira imagem
             }
         }
 
         // Função para exibir o próximo card
         function showNextCard() {
+            // Cancela a leitura atual, se estiver acontecendo
+            if (speechSynthesis.speaking) {
+                speechSynthesis.cancel();
+            }
+
             currentCardIndex = (currentCardIndex + 1) % cardsData.length;
             displayCard(currentCardIndex);
         }
 
         // Função para exibir o card anterior
         function showPreviousCard() {
+            // Cancela a leitura atual, se estiver acontecendo
+            if (speechSynthesis.speaking) {
+                speechSynthesis.cancel();
+            }
+
             currentCardIndex = (currentCardIndex - 1 + cardsData.length) % cardsData.length;
             displayCard(currentCardIndex);
         }
