--- a/nivelA/unidade4/StoryCards/index.html
+++ b/nivelA/unidade4/StoryCards/index.html
@@ -208,6 +208,13 @@
                 cardElement.innerHTML = `<img src="images/${cardData.image}.jpeg" alt="Image">`;
             }
 
+            // Adiciona a imagem do businessman no topo direito
+            const businessmanImage = document.createElement('img');
+            businessmanImage.src = 'businessman.png'; // Caminho para a imagem businessman.png
+            businessmanImage.className = 'businessman';
+            businessmanImage.onclick = () => toggleSpeech(cardData.text); // Faz a leitura do texto ao clicar no businessman
+
+            cardElement.appendChild(businessmanImage);
             container.appendChild(cardElement);
 
             // Esconde o botão "Previous" se estivermos na primeira imagem
@@ -216,6 +223,17 @@
                 prevButton.style.display = 'none'; // Esconde o botão "Previous" na primeira imagem
             } else {
                 prevButton.style.display = 'block'; // Exibe o botão "Previous" se não estivermos na primeira imagem
+            }
+        }
+
+        // Função para iniciar ou parar a leitura do texto
+        function toggleSpeech(text) {
+            if (speechSynthesis.speaking) {
+                speechSynthesis.cancel(); // Para a fala atual
+            } else {
+                currentUtterance = new SpeechSynthesisUtterance(text);
+                currentUtterance.lang = 'en-US'; // Configura o idioma para Inglês (US)
+                speechSynthesis.speak(currentUtterance); // Inicia a fala
             }
         }
 
