--- a/nivelA/unidade4/StoryCards/index.html
+++ b/nivelA/unidade4/StoryCards/index.html
@@ -83,13 +83,16 @@
         .businessman {
             position: absolute;
             top: 10px;
-            right: 30px;
+            right: 10px; /* Ajusta o ícone para não ficar muito próximo ao conteúdo */
             width: 30px;  /* Tamanho pequeno */
             height: 30px;  /* Tamanho pequeno */
             object-fit: contain; /* Mantém as proporções */
             cursor: pointer;
-            z-index: 10; /* Garante que a imagem fique visível e não seja cortada */
+            z-index: 10; /* Garante que a imagem fique visível */
             max-width: 100%; /* Evita que a imagem seja cortada no container */
+            padding: 5px; /* Adiciona um pequeno padding para evitar sobreposição com o conteúdo */
+            background-color: rgba(255, 255, 255, 0.8); /* Fundo semitransparente */
+            border-radius: 50%; /* Borda arredondada */
         }
         button {
             margin: 20px;
