--- a/nivelA/unidade4/StoryCards/index.html
+++ b/nivelA/unidade4/StoryCards/index.html
@@ -58,6 +58,9 @@
         }
         .active {
             display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: flex-start; /* Faz com que o conteúdo comece no topo */
         }
         .card img {
             max-width: 100%;
@@ -79,18 +82,17 @@
             justify-content: center;
             min-height: 100px;
             width: 100%;
+            margin-top: 60px; /* Adiciona um espaço extra para garantir que o texto fique abaixo do ícone */
         }
         .businessman {
             position: absolute;
-            top: 10px;
-            right: 10px; /* Ajusta o ícone para não ficar muito próximo ao conteúdo */
-            width: 30px;  /* Tamanho pequeno */
-            height: 30px;  /* Tamanho pequeno */
+            top: 10px; /* Levanta o ícone para cima */
+            right: 30px; /* Mantém o espaçamento à direita */
+            width: 40px;  /* Aumenta o tamanho do ícone */
+            height: 40px;  /* Aumenta o tamanho do ícone */
             object-fit: contain; /* Mantém as proporções */
             cursor: pointer;
             z-index: 10; /* Garante que a imagem fique visível */
-            max-width: 100%; /* Evita que a imagem seja cortada no container */
-            padding: 5px; /* Adiciona um pequeno padding para evitar sobreposição com o conteúdo */
             background-color: rgba(255, 255, 255, 0.8); /* Fundo semitransparente */
             border-radius: 50%; /* Borda arredondada */
         }
