--- a/Formulário/login.html
+++ b/Formulário/login.html
@@ -60,6 +60,25 @@
             text-decoration: underline;
         }
     </style>
+
+    <!-- Firebase Libraries -->
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+
+    <!-- Configuração do Firebase -->
+    <script>
+        var firebaseConfig = {
+            apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
+            authDomain: "hannahenglishcourse.firebaseapp.com",
+            projectId: "hannahenglishcourse",
+            storageBucket: "hannahenglishcourse.appspot.com",
+            messagingSenderId: "449818788486",
+            appId: "1:449818788486:web:8a49d3f68591e6fb3f0707",
+            measurementId: "G-07VVJG9LRS"
+        };
+        // Inicializando Firebase
+        firebase.initializeApp(firebaseConfig);
+    </script>
 </head>
 <body>
     <div class="login-container">
@@ -79,35 +98,33 @@
         document.getElementById('loginForm').addEventListener('submit', async function(event) {
             event.preventDefault();
 
-            const username = document.getElementById('username').value;
+            const email = document.getElementById('username').value;
             const password = document.getElementById('password').value;
 
             try {
-                // Fazendo a requisição POST para o endpoint de login
-                const response = await fetch('/api/login', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
-                    body: JSON.stringify({ username, password })
-                });
+                // Configurar persistência de login no local storage
+                firebase.auth().setPersistence(firebase.auth.Auth.Persistence.LOCAL)
+                    .then(function() {
+                        // Fazer o login com Firebase Authentication
+                        return firebase.auth().signInWithEmailAndPassword(email, password);
+                    })
+                    .then((userCredential) => {
+                        // Login bem-sucedido
+                        var user = userCredential.user;
+                        document.getElementById('message').style.color = 'green';
+                        document.getElementById('message').textContent = `Login successful! Welcome, ${user.email}.`;
 
-                const result = await response.json();
-
-                // Exibindo a resposta no frontend
-                const messageDiv = document.getElementById('message');
-                if (response.ok) {
-                    messageDiv.style.color = 'green';
-                    messageDiv.textContent = `Login successful! Welcome, ${result.user}.`;
-
-                    // Redirecionar para o index.html que está um nível acima
-                    setTimeout(() => {
-                        window.location.href = "../index.html"; // Subir um nível e ir para o index.html
-                    }, 2000); // Atraso de 2 segundos antes do redirecionamento
-                } else {
-                    messageDiv.style.color = 'red';
-                    messageDiv.textContent = result.message || 'Error during login.';
-                }
+                        // Redirecionar para o index.html após login
+                        setTimeout(() => {
+                            window.location.href = "../index.html";
+                        }, 2000);
+                    })
+                    .catch((error) => {
+                        var errorCode = error.code;
+                        var errorMessage = error.message;
+                        document.getElementById('message').style.color = 'red';
+                        document.getElementById('message').textContent = errorMessage;
+                    });
             } catch (error) {
                 console.error('Error:', error);
                 document.getElementById('message').textContent = 'Login failed. Try again later.';
